Update injllj.vmoptions. Add gradle.properties.