@@ -1,16 +1,41 @@
-# custom IntelliJ IDEA VM options
+# custom Android Studio VM options, see https://developer.android.com/studio/intro/studio-config.html
+-ea
 -server
--Xms1024m
+-Xms2048m
 -Xmx4096m
+-Xss10m
 -XX:MaxPermSize=1024m
--XX:ReservedCodeCacheSize=1024m
--XX:+UseCompressedOops
--XX:+UseCodeCacheFlushing
+-XX:MaxMetaspaceSize=2G
+-XX:ReservedCodeCacheSize=1G
+-XX:MetaspaceSize=512m
 -XX:+UseConcMarkSweepGC
+-XX:+DoEscapeAnalysis
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:+UnlockExperimentalVMOptions
+-Djava.net.preferIPv4Stack=true
+-Dsun.io.useCanonCaches=false
+-XX:LargePageSizeInBytes=256m
+-XX:+UseCodeCacheFlushing
+-XX:ParallelGCThreads=8
+-XX:+DisableExplicitGC
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+PrintGCDetails
+-XX:+PrintFlagsFinal
 -XX:+AggressiveOpts
 -XX:+CMSClassUnloadingEnabled
--XX:+CMSIncrementalMode
--XX:+CMSIncrementalPacing
--XX:CMSIncrementalDutyCycleMin=0
--XX:-TraceClassUnloading
--XX:+TieredCompilation
+-XX:CMSInitiatingOccupancyFraction=60
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSParallelRemarkEnabled
+-XX:+UseAdaptiveGCBoundary
+-XX:+UseSplitVerifier
+-XX:CompileThreshold=10000
+-XX:+OptimizeStringConcat
+-XX:+UseStringCache
+-XX:+UseFastAccessorMethods
+-XX:+UnlockDiagnosticVMOptions
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+UseCompressedOops
+-XX:-OmitStackTraceInFastThrow
+-Dawt.useSystemAAFontSettings=lcd
+
+-Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
